Fix wrapping of contact details so it's consistent on mobile

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -279,7 +279,6 @@ Contact Page styles
     display: flex;
     height: 100%;
     margin: 50px;
-    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -296,6 +295,29 @@ Contact Page styles
     width: 35px;
     height: auto;
     margin: 20px 10px;
+}
+
+/* Media query for screens smaller than 380px */
+/* Places links on their own line for consistent wrapping */
+@media (max-width: 380px) {
+    .contact-details div {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        text-align: center;
+    }
+    
+    .contact-details div a {
+        display: inline-block;
+        margin-top: 5px;
+    }
 }
 
 .contact-form {
