--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,6 @@ Contact Page styles
     display: flex;
     height: 100%;
     margin: 50px;
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -256,6 +255,22 @@ Contact Page styles
     width: 35px;
     height: auto;
     margin: 20px 10px;
+}
+
+/* Media query for screens smaller than 380px */
+/* Places links on their own line for consistent wrapping */
+@media (max-width: 380px) {
+    .contact-details div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .contact-details div a {
+        display: inline-block;
+        margin-top: 5px;
+    }
 }
 
 .contact-form {
